--- a/styles/flipdown.css
+++ b/styles/flipdown.css
@@ -1,15 +1,38 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #f2f1ed;
 }
 
-.wrap {
+/*
+.flipdown {
   position: absolute;
   bottom: 0;
   top: 0;
   left: 0;
   right: 0;
   margin: auto;
+  height: 310px; 
+}
+*/
+
+.wrapper {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
   height: 310px;
+  gap: 60px;
 }
 
 a {
@@ -23,6 +46,7 @@ h1 {
   font: 300 2.25em "Lato";
   text-transform: uppercase;
 }
+
 h1 strong {
   font-weight: 400;
   color: #ea4c4c;
@@ -31,25 +55,31 @@ h1 strong {
 h2 {
   margin-bottom: 80px;
   text-align: center;
-  font: 300 0.7em "Lato";
+  /* font: 300 0.7em "Lato"; */
+  font: 300 1.5em "Lato";
   text-transform: uppercase;
 }
+
 h2 strong {
   font-weight: 400;
+  color: #ea4c4c;
 }
 
 .countdown {
   width: 720px;
   margin: 0 auto;
 }
+
 .countdown .bloc-time {
   float: left;
   margin-right: 45px;
   text-align: center;
 }
+
 .countdown .bloc-time:last-child {
   margin-right: 0;
 }
+
 .countdown .count-title {
   display: block;
   margin-bottom: 15px;
@@ -57,6 +87,7 @@ h2 strong {
   color: #1a1a1a;
   text-transform: uppercase;
 }
+
 .countdown .figure {
   position: relative;
   float: left;
@@ -69,10 +100,12 @@ h2 strong {
   -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
   box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
 }
+
 .countdown .figure:last-child {
   margin-right: 0;
 }
-.countdown .figure > span {
+
+.countdown .figure>span {
   position: absolute;
   left: 0;
   right: 0;
@@ -81,7 +114,9 @@ h2 strong {
   font-weight: 700;
   color: #de4848;
 }
-.countdown .figure .top:after, .countdown .figure .bottom-back:after {
+
+.countdown .figure .top:after,
+.countdown .figure .bottom-back:after {
   content: "";
   position: absolute;
   z-index: -1;
@@ -91,6 +126,7 @@ h2 strong {
   height: 100%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 .countdown .figure .top {
   z-index: 3;
   background-color: #f7f7f7;
@@ -107,9 +143,11 @@ h2 strong {
   -webkit-transform: perspective(200px);
   transform: perspective(200px);
 }
+
 .countdown .figure .bottom {
   z-index: 1;
 }
+
 .countdown .figure .bottom:before {
   content: "";
   position: absolute;
@@ -120,6 +158,7 @@ h2 strong {
   height: 50%;
   background-color: rgba(0, 0, 0, 0.02);
 }
+
 .countdown .figure .bottom-back {
   z-index: 2;
   top: 0;
@@ -133,6 +172,7 @@ h2 strong {
   -webkit-border-top-right-radius: 10px;
   border-top-right-radius: 10px;
 }
+
 .countdown .figure .bottom-back span {
   position: absolute;
   top: 0;
@@ -140,13 +180,16 @@ h2 strong {
   right: 0;
   margin: auto;
 }
-.countdown .figure .top, .countdown .figure .top-back {
+
+.countdown .figure .top,
+.countdown .figure .top-back {
   height: 50%;
   overflow: hidden;
   -moz-backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .countdown .figure .top-back {
   z-index: 4;
   bottom: 0;
@@ -164,6 +207,7 @@ h2 strong {
   -webkit-border-bottom-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
+
 .countdown .figure .top-back span {
   position: absolute;
   top: -100%;
