--- a/styles/modal.css
+++ b/styles/modal.css
@@ -6,6 +6,26 @@
     z-index: 10;
 }
 
+.close {
+    font-size: 18px;
+    color: #F5F5F5;
+    position: absolute;
+    right: 0;
+    top: -40px;
+    padding: 7px 15px;
+    background-color: #b63333;
+    border-radius: 5px;
+    color: #fff;
+    transition: all ease 0.3s;
+    text-align: center;
+    font-weight: 200;
+    cursor: pointer;
+}
+
+.close:hover {
+    background-color: #9a2a2a;
+}
+
 .modal {
     position: fixed;
     display: flex;
@@ -19,12 +39,20 @@
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     z-index: 20;
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 600px;
     gap: 10px;
 }
 
-.modal div {
+.inputs {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.modal-hours,
+.modal-minutes,
+.modal-seconds {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -35,20 +63,54 @@
 
 .modal p {
     text-align: left;
-}
-
-.modal input {
-    padding: 2px;
-}
-
-.modal .buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    gap: 20px;
+    font-size: 14px;
+    margin-bottom: 5px;
 }
 
 .modal button {
+    font-size: 13px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    border-radius: 2px;
+    padding: 13px 28px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.14);
+    text-transform: uppercase;
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2);
+    padding: 18px 49px;
+    border: medium none;
+    background-size: 400% 400%;
     cursor: pointer;
+    font-weight: bolder;
+    transition: 500ms;
+    background: #33bc30;
+    color: #fff;
+    width: 80%;
+    cursor: pointer;
+}
+
+.modal button:hover {
+    background: #16982d;
+}
+
+.modal p {
+    font-size: 1.2em;
+    font-family: Arial, sans-serif;
+    font-weight: 600;
+    color: rgb(82, 82, 82);
+}
+
+.modal select {
+    text-align: center;
+    width: 100px;
+    height: 40px;
+    font-size: 1.5em;
+    font-weight: 500;
+    font-family: Arial, sans-serif;
+    cursor: pointer;
+}
+
+.modal option {
+    font-size: 1em;
+    cursor: pointer;
+    font-family: Arial, sans-serif;
 }
